feat: v0 カスタムJREでのマルチステージビルドを可能にした